--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Exam_10Feb</string>
+    <string name="start_quiz">START QUIZ!</string>
+    <string name="question">Question</string>
+    <string name="answer">Answer</string>
+    <string name="next">NEXT-></string>
 </resources>
